<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                android:background="@drawable/logo" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="Sistem Pakar\nDiagnosa Penyakit\nAkibat Gigitan Nyamuk"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/gejala_gejala"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/gejala_1"
            android:textColor="@android:color/black" />

        <com.chivorn.smartmaterialspinner.SmartMaterialSpinner
            android:id="@+id/spinGejala1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:paddingLeft="10dp"
            app:smsp_arrowColor="@android:color/black"
            app:smsp_arrowPaddingTop="8dp"
            app:smsp_enableErrorLabel="false"
            app:smsp_enableFloatingLabel="false"
            app:smsp_hint="Status Gejala"
            app:smsp_isSearchable="true"
            app:smsp_itemColor="@android:color/black"
            app:smsp_searchHeaderBackgroundColor="@color/colorPrimary"
            app:smsp_searchHeaderText="@string/gejala_1"
            app:smsp_searchHeaderTextColor="@color/colorAccent"
            app:smsp_searchTextColor="@android:color/black"
            app:smsp_selectedItemListColor="@color/colorPrimary"
            app:smsp_underlineSize="0dp" />
        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/gejala_2"
            android:textColor="@android:color/black" />
        <com.chivorn.smartmaterialspinner.SmartMaterialSpinner
            android:id="@+id/spinGejala2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:paddingLeft="10dp"
            app:smsp_arrowColor="@android:color/black"
            app:smsp_arrowPaddingTop="8dp"
            app:smsp_enableErrorLabel="false"
            app:smsp_enableFloatingLabel="false"
            app:smsp_hint="Status Gejala"
            app:smsp_isSearchable="true"
            app:smsp_itemColor="@android:color/black"
            app:smsp_searchHeaderBackgroundColor="@color/colorPrimary"
            app:smsp_searchHeaderText="@string/gejala_2"
            app:smsp_searchHeaderTextColor="@color/colorAccent"
            app:smsp_searchTextColor="@android:color/black"
            app:smsp_selectedItemListColor="@color/colorPrimary"
            app:smsp_underlineSize="0dp" />
        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/gejala_3"
            android:textColor="@android:color/black" />

        <com.chivorn.smartmaterialspinner.SmartMaterialSpinner
            android:id="@+id/spinGejala3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:paddingLeft="10dp"
            app:smsp_arrowColor="@android:color/black"
            app:smsp_arrowPaddingTop="8dp"
            app:smsp_enableErrorLabel="false"
            app:smsp_enableFloatingLabel="false"
            app:smsp_hint="Status Gejala"
            app:smsp_isSearchable="true"
            app:smsp_itemColor="@android:color/black"
            app:smsp_searchHeaderBackgroundColor="@color/colorPrimary"
            app:smsp_searchHeaderText="@string/gejala_3"
            app:smsp_searchHeaderTextColor="@color/colorAccent"
            app:smsp_searchTextColor="@android:color/black"
            app:smsp_selectedItemListColor="@color/colorPrimary"
            app:smsp_underlineSize="0dp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/gejala_4"
            android:textColor="@android:color/black" />
        <com.chivorn.smartmaterialspinner.SmartMaterialSpinner
            android:id="@+id/spinGejala4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:paddingLeft="10dp"
            app:smsp_arrowColor="@android:color/black"
            app:smsp_arrowPaddingTop="8dp"
            app:smsp_enableErrorLabel="false"
            app:smsp_enableFloatingLabel="false"
            app:smsp_hint="Status Gejala"
            app:smsp_isSearchable="true"
            app:smsp_itemColor="@android:color/black"
            app:smsp_searchHeaderBackgroundColor="@color/colorPrimary"
            app:smsp_searchHeaderText="@string/gejala_4"
            app:smsp_searchHeaderTextColor="@color/colorAccent"
            app:smsp_searchTextColor="@android:color/black"
            app:smsp_selectedItemListColor="@color/colorPrimary"
            app:smsp_underlineSize="0dp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/gejala_5"
            android:textColor="@android:color/black" />
        <com.chivorn.smartmaterialspinner.SmartMaterialSpinner
            android:id="@+id/spinGejala5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:paddingLeft="10dp"
            app:smsp_arrowColor="@android:color/black"
            app:smsp_arrowPaddingTop="8dp"
            app:smsp_enableErrorLabel="false"
            app:smsp_enableFloatingLabel="false"
            app:smsp_hint="Status Gejala"
            app:smsp_isSearchable="true"
            app:smsp_itemColor="@android:color/black"
            app:smsp_searchHeaderBackgroundColor="@color/colorPrimary"
            app:smsp_searchHeaderText="@string/gejala_5"
            app:smsp_searchHeaderTextColor="@color/colorAccent"
            app:smsp_searchTextColor="@android:color/black"
            app:smsp_selectedItemListColor="@color/colorPrimary"
            app:smsp_underlineSize="0dp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/gejala_6"
            android:textColor="@android:color/black" />
        <com.chivorn.smartmaterialspinner.SmartMaterialSpinner
            android:id="@+id/spinGejala6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:paddingLeft="10dp"
            app:smsp_arrowColor="@android:color/black"
            app:smsp_arrowPaddingTop="8dp"
            app:smsp_enableErrorLabel="false"
            app:smsp_enableFloatingLabel="false"
            app:smsp_hint="Status Gejala"
            app:smsp_isSearchable="true"
            app:smsp_itemColor="@android:color/black"
            app:smsp_searchHeaderBackgroundColor="@color/colorPrimary"
            app:smsp_searchHeaderText="@string/gejala_6"
            app:smsp_searchHeaderTextColor="@color/colorAccent"
            app:smsp_searchTextColor="@android:color/black"
            app:smsp_selectedItemListColor="@color/colorPrimary"
            app:smsp_underlineSize="0dp" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/gejala_7"
            android:textColor="@android:color/black" />
        <com.chivorn.smartmaterialspinner.SmartMaterialSpinner
            android:id="@+id/spinGejala7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:paddingLeft="10dp"
            app:smsp_arrowColor="@android:color/black"
            app:smsp_arrowPaddingTop="8dp"
            app:smsp_enableErrorLabel="false"
            app:smsp_enableFloatingLabel="false"
            app:smsp_hint="Status Gejala"
            app:smsp_isSearchable="true"
            app:smsp_itemColor="@android:color/black"
            app:smsp_searchHeaderBackgroundColor="@color/colorPrimary"
            app:smsp_searchHeaderText="@string/gejala_7"
            app:smsp_searchHeaderTextColor="@color/colorAccent"
            app:smsp_searchTextColor="@android:color/black"
            app:smsp_selectedItemListColor="@color/colorPrimary"
            app:smsp_underlineSize="0dp" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/gejala_8"
            android:textColor="@android:color/black" />
        <com.chivorn.smartmaterialspinner.SmartMaterialSpinner
            android:id="@+id/spinGejala8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:paddingLeft="10dp"
            app:smsp_arrowColor="@android:color/black"
            app:smsp_arrowPaddingTop="8dp"
            app:smsp_enableErrorLabel="false"
            app:smsp_enableFloatingLabel="false"
            app:smsp_hint="Status Gejala"
            app:smsp_isSearchable="true"
            app:smsp_itemColor="@android:color/black"
            app:smsp_searchHeaderBackgroundColor="@color/colorPrimary"
            app:smsp_searchHeaderText="@string/gejala_8"
            app:smsp_searchHeaderTextColor="@color/colorPrimary"
            app:smsp_searchTextColor="@android:color/black"
            app:smsp_selectedItemListColor="@color/colorPrimary"
            app:smsp_underlineSize="0dp" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/gejala_9"
            android:textColor="@android:color/black" />
        <com.chivorn.smartmaterialspinner.SmartMaterialSpinner
            android:id="@+id/spinGejala9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:paddingLeft="10dp"
            app:smsp_arrowColor="@android:color/black"
            app:smsp_arrowPaddingTop="8dp"
            app:smsp_enableErrorLabel="false"
            app:smsp_enableFloatingLabel="false"
            app:smsp_hint="Status Gejala"
            app:smsp_isSearchable="true"
            app:smsp_itemColor="@android:color/black"
            app:smsp_searchHeaderBackgroundColor="@color/colorPrimary"
            app:smsp_searchHeaderText="@string/gejala_9"
            app:smsp_searchHeaderTextColor="@color/colorAccent"
            app:smsp_searchTextColor="@android:color/black"
            app:smsp_selectedItemListColor="@color/colorPrimary"
            app:smsp_underlineSize="0dp" />

        <Button
            android:id="@+id/btnDiagnostic"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_rounded"
            android:text="@string/diagnosa"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>